[+] TypeAheadComponent : created, closes #2

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,15 +2,26 @@
 
 <div *ngIf="!spinnerActive" class="container">
 
-    <div  class="form-group col-md-6">
-        <label>Rail station search</label>
+    <div class="form-group col-md-6">
+        <label>Rail station autocomplete</label>
         <autocomplete 
             [(ngModel)]="railStation" 
             [source]="railStatonsSource" 
-            placeholder="Enter a rail station name"
+            placeholder="Start to type a rail station name"
             name="railStation">
         </autocomplete>
         <div>{{ railStation | json }}</div>
+    </div>
+
+    <div class="form-group col-md-6">
+        <label>Country typeahead</label>
+        <typeahead 
+            [(ngModel)]="country" 
+            [source]="countriesSource"
+            placeholder="Start to type a country name"
+            name="country">
+        </typeahead>
+        <div>{{ country | json }}</div>
     </div>
     
 </div>
