[+] DatePickerComponent : created, closes #3

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,5 +23,15 @@
         </typeahead>
         <div>{{ country | json }}</div>
     </div>
+
+    <div class="form-group col-md-6">
+        <label>Day of birth</label>        
+        <date-picker 
+            [(ngModel)]="birthDate"
+            [datepicker]="{placeholder: 'Choose your birth date'}" 
+            name="birthDate">
+        </date-picker>
+        <div>{{ birthDate | date:'dd.MM.yyyy' }}</div>
+    </div>
     
 </div>
