--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -58,20 +58,39 @@
         
     </form>
 
-    <div class="form-group col-md-3">
-        <label>Filter pizzas</label> 
-        <input #filter
-            [(ngModel)]="filterTerm" 
-            placeholder="Enter term to filter items"
-            class="form-control">
-        <ul>
-            <li *ngFor="let pizza of pizzas | filter : filterTerm">
-                {{ pizza }}
-            </li>
-        </ul>
+    <div class="form-group col-md-3 panel panel-default">
+        <div class="panel-body">
+            <label>Filter pizzas</label> 
+            <input #filter
+                [(ngModel)]="filterTerm" 
+                placeholder="Enter term to filter items"
+                class="form-control">
+            <ul>
+                <li *ngFor="let pizza of pizzas | filter : filterTerm">
+                    {{ pizza }}
+                </li>
+            </ul>
+        </div>
     </div>
 
-    <div class="col-md-3">
+    <div class="col-md-6 panel panel-default">
+        <div class="panel-body">
+        <div class="col-md-6">
+        <label>Select pizzas</label> 
+            <checkbox-list [items]="pizzasList" [selectedIndexes]="selectedPizzaIndexes" (selectedItems)="selectedPizzas = $event"></checkbox-list>
+        </div>
+        <div class="col-md-6">
+            <label>Selected</label> 
+            <ul>
+                <li *ngFor="let pizza of selectedPizzas">
+                    {{ pizza.name }}
+                </li>
+            </ul>
+        </div>
+        </div>
+    </div>
+
+    <div class="col-md-2">
         <popover-content #clickPopover title="Title" placement="top" [closeOnClickOutside]="true">
             Click popover content
         </popover-content>
@@ -89,7 +108,7 @@
         </button>
     </div>
 
-    <div class="col-md-3">
+    <div class="col-md-1">
         <toggle-switch [(ngModel)]="switchOn"></toggle-switch>
         <span>switchOn: {{ switchOn }}</span>
     </div>
