[+] ErrorsModule (HttpInterceptor, ErrorHandler, NotificationService) created, closes #35, closes #36

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,10 @@
 <spinner [active]="spinnerActive"></spinner>
 
+<error [active]="apiError" 
+    [error]="apiError"
+    [dismissible]="true">
+</error>
+
 
 <div *ngIf="!spinnerActive" class="container" style="padding-top:10px">
     
