[!] App : moved to angular 6 and rxjs 6 (uses rxjs-compat, some components are broken!)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,7 +24,7 @@
 
     <form #form="ngForm" (submit)="submit(form)" class="well">
 
-        <div class="form-group col-md-6">
+        <!--<div class="form-group col-md-6">
             <label>Rail station autocomplete</label>
             <autocomplete 
                 [(ngModel)]="railStation" 
@@ -46,7 +46,7 @@
                 name="country">
             </typeahead>
             <div>{{ country | json }}</div>
-        </div>
+        </div>-->
 
         <div class="form-group col-md-6">
             <label>Day of birth</label>        
