[+] PagerComponent : created, closes #10

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -171,4 +171,7 @@
         </status-indicator>
     </div>
 
+    
+    <pager [model]="paginationInfo" (changed)="onPageChanged($event)"><pager>
+
 </div>
