--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -178,6 +178,21 @@
             [pulse]="statusPulse">
         </status-indicator>
     </div>
+
+    <div class="col-md-4">
+        <mat-card>
+            <mat-card-header>
+                <img mat-card-avatar appGravatar [email]="email">
+                <mat-card-title>Gravatar Directive</mat-card-title>
+            </mat-card-header>
+          <mat-card-content>
+              <mat-form-field appearance="outline">
+                <mat-label>Email</mat-label>
+                <input matInput [(ngModel)]="email">
+              </mat-form-field>
+          </mat-card-content>
+        </mat-card>
+    </div>
 </div>
 
 <pager [model]="paginationInfo" (changed)="onPageChanged($event)"><pager>
