--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -10,6 +10,7 @@
     text-align: center;
 }
 
+/* drag-drop */
 .drag-drop-item {
     height: 30px;
     margin-top: 3px;
@@ -17,4 +18,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+/* animate items sort */
+.cdk-drop-list-dragging .cdk-drag {
+    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+/* animate item dropped */
+.cdk-drag-animating {
+    transition: transform 300ms cubic-bezier(0, 0, 0.2, 1);
 }
