[+] PlatformService : created, closes #89

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,6 +21,7 @@
             <img [src]="currentLang.imageUri">
             {{ currentLang.code }}
         </small>
+        <small>platform: {{ myPlatform }}</small>
     </h1>
     
     <div> 
