[+] WildCardTreeComponent : created, closes #94

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -252,6 +252,12 @@
             </div>
         </form>
     </div>
+
+    <div *ngIf="treeData" class="col-md-4">        
+        <p><a routerLink='/wildcard'>Run wildcard</a></p>
+        <wildcard-tree [treeData]="treeData"></wildcard-tree>
+    </div>
+
 </div>
 
 <pager [model]="paginationInfo" (changed)="onPageChanged($event)"><pager>
